--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,7 +13,9 @@
   "dependencies": {
     "@types/node": "^18.0.6",
     "discord.js-selfbot-v13": "^2.9.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "moment-timezone": "^0.5.33",
     "node-fetch": "^3.2.6"
   }
 }
